--- a/code/Cropping images.ipynb
+++ b/code/Cropping images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,27 +30,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# comment this cell if code above is used\n",
     "# reading into files\n",
-    "img_to_rsz1 = cv2.imread('./images/Hurricane_Harvey_TX_before.jpg')\n",
-    "img_to_rsz2 = cv2.imread('./images/Hurricane_Harvey_TX_after.jpg')\n",
-    "img_to_rsz3 = cv2.imread('./images/Hurricane_Harvey_freeport_before.jpg')\n",
-    "img_to_rsz4 = cv2.imread('./images/Hurricane_Harvey_freeport_after.jpg')\n",
-    "img_to_rsz5 = cv2.imread('./images/Tornado_Joplin_Missouri_before.jpg')\n",
-    "img_to_rsz6 = cv2.imread('./images/Tornado_Joplin_Missouri_after.jpg')\n",
-    "img_to_rsz7 = cv2.imread('./images/wildfire_CA_before.jpg')\n",
-    "img_to_rsz8 = cv2.imread('./images/Wildfire_CA_wildfire_after.jpg')\n",
-    "img_to_rsz9 = cv2.imread('./images/omaha_before.jpg')\n",
-    "img_to_rsz10 = cv2.imread('./images/omaha_after.jpg')"
+    "img_to_rsz1 = cv2.imread('../images/Hurricane_Harvey_TX_before.jpg')\n",
+    "img_to_rsz2 = cv2.imread('../images/Hurricane_Harvey_TX_after.jpg')\n",
+    "img_to_rsz3 = cv2.imread('../images/Hurricane_Harvey_freeport_before.jpg')\n",
+    "img_to_rsz4 = cv2.imread('../images/Hurricane_Harvey_freeport_after.jpg')\n",
+    "img_to_rsz5 = cv2.imread('../images/Tornado_Joplin_Missouri_before.jpg')\n",
+    "img_to_rsz6 = cv2.imread('../images/Tornado_Joplin_Missouri_after.jpg')\n",
+    "img_to_rsz7 = cv2.imread('../images/wildfire_CA_before.jpg')\n",
+    "img_to_rsz8 = cv2.imread('../images/Wildfire_CA_wildfire_after.jpg')\n",
+    "img_to_rsz9 = cv2.imread('../images/omaha_before.jpg')\n",
+    "img_to_rsz10 = cv2.imread('../images/omaha_after.jpg')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
     "    elif img.shape[0] in range(550,600) and img.shape[1] in range(750,850):\n",
     "        cropped.append(img[5:550, 5:750])\n",
     "    elif img.shape[0] in range(750,800) and img.shape[1] in range(500,650):\n",
-    "        cropped.append(img[5:750, 5:550])\n",
+    "        cropped.append(img[5:750, 5:500])\n",
     "    else:\n",
     "        print(f'check image sizes of {img[i]}')\n",
     " "
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -145,8 +145,8 @@
       "(395, 495, 3)\n",
       "(545, 745, 3)\n",
       "(545, 745, 3)\n",
-      "(745, 537, 3)\n",
-      "(745, 545, 3)\n",
+      "(745, 495, 3)\n",
+      "(745, 495, 3)\n",
       "(345, 695, 3)\n",
       "(345, 695, 3)\n"
      ]
@@ -160,36 +160,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# write the files\n",
     "for i, img in enumerate(cropped):\n",
-    "    cv2.imwrite(f'./Outputimages/cropped{i}.jpg', img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# convert images to grayscale\n",
-    "gray = []\n",
-    "for img in cropped:\n",
-    "    gray.append(cv2.cvtColor(img, cv2.COLOR_BGR2GRAY))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# write the files\n",
-    "for i, img in enumerate(gray):\n",
-    "    cv2.imwrite(f'./Grayimages/grayscaled{i}.jpg', img)"
+    "    cv2.imwrite(f'../images/Outputimages/cropped{i}.jpg', img)"
    ]
   },
   {
@@ -221,13 +198,6 @@
     "        print(f'SSIM for {i} pair is: {score}')\n",
     "        print(f'PSNR for {i} pair is: {compare_psnr(img[i], img[i+1])}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
